# ITSS_Restaurant_Backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: .env.example  main.py  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 20241126_0132_3fce93aa29c9_init.py  20241203_1604_9c1ca82ebd8e_init.py  20241207_0219_f5f2ed861ec0_update_user_table.py  20241207_0229_966bfdcdfb4a_update_tables.py  20241207_0231_064d42f38b6d_create_dish_table_and_review_table.py  20241207_0234_ef684af1dd29_update_review_table.py  20241223_0054_65771c11e39d_update_user_table.py  20241223_0131_adddddf7056e_update_dish_table.py  20241226_1835_01ec83e7071f_update_dish_table.py  20241228_1526_66e252e32b21_update_user_table.py  20241230_1616_5c92eba3e206_update_review_table.py
backend/api/v1/: api.py
backend/api/v1/admin/routes/: __init__.py  user.py
backend/api/v1/admin/services/users/: __init__.py  listing_users_service.py
backend/api/v1/audience/routes/: __init__.py  auth.py  user.py
backend/api/v1/dependencies/: authentication.py
backend/api/v1/user/routes/: __init__.py  auth.py  dish.py  review.py  upload.py  user.py
backend/cloudinary/: cloudinary.py
backend/constants/: account_status.py
backend/core/: config.py  constant.py  error_code.py  exception.py  response.py
backend/db/: database.py
backend/map/: map_service.py
backend/models/: __init__.py  base.py  dish.py  review.py  user.py
backend/s3/: s3.py
backend/schemas/: auth.py  base.py  common.py  dish.py  review.py  upload.py  user.py
(+25 files in other folders)
